--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="appear" align="center">
-  <h1>MediaRentalHub<br>
-    Where entertainment finds its home</h1>
+  <div class="catalog-title">
+    <h1>MediaRentalHub</h1>
+    <p>Where entertainment finds its home</p>
+  </div>
 </div>
 
 <div class="slider-frame">
