--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -57,17 +57,34 @@ h2 {
   margin: 30px;
 }
 
+.catalog-title {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.catalog-title h1 {
+  font-size: 36px;
+  font-weight: bold;
+  color: #4a90e2;
+  margin-bottom: 10px;
+}
+
+.catalog-title p {
+  font-size: 18px;
+  color: #666;
+}
+
 .appear h1 {
   font-weight: bold;
   font-size: 75px;
+  margin-top: 2%;
+  font-weight: bold;
+  color: #4a90e2;
 }
 
 .appear {
   animation: fadeInAnimation 2s ease-out forwards;
   opacity: 0;
-  margin-top: 2%;
-  font-weight: bold;
-  color: #4a90e2;
   margin-bottom: 10px;
 }
 
