--- a/src/app/movies/info/info.component.html
+++ b/src/app/movies/info/info.component.html
@@ -28,7 +28,7 @@
           <img
             class="card-img-top"
             src="{{ movie.image_url }}"
-            alt="Book cover"
+            alt="Movie cover"
             style="height: 490px; object-fit: cover"
           />
         </div>
