--- a/src/app/books/books-cat/books-cat.component.html
+++ b/src/app/books/books-cat/books-cat.component.html
@@ -67,7 +67,7 @@
     @for (book of books; track $index) {
       @if (book.available === true) {
         <div class="card" style="width: 18rem">
-          <img src="{{ book.image_url }}" class="card-img-top" alt="..." />
+          <img src="{{ book.image_url }}" class="card-img-top" alt="Book image" />
           <div class="card-body">
             <h5 class="card-title">{{ book.title }}</h5>
             <p class="card-text">{{ book.gender }}</p>
