--- a/src/app/movies/movies-cat/movies-cat.component.html
+++ b/src/app/movies/movies-cat/movies-cat.component.html
@@ -65,7 +65,7 @@
     @for (movie of movies; track $index) { @if (movie.available === true) {
   
     <div class="card" style="width: 18rem">
-      <img src="{{ movie.image_url }}" class="card-img-top" alt="..." />
+      <img src="{{ movie.image_url }}" class="card-img-top" alt="Movie cover" />
       <div class="card-body">
         <h5 class="card-title">{{ movie.title }}</h5>
         <p class="card-text">{{ movie.gender }}</p>
