--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="appear" align="center">
   <div class="catalogue-title">
     <h1>MediaRentalHub</h1>
-    <p>Where entertainment finds its home</p>
+    <p style="  font-size: 25px; color: #666;">Where entertainment finds its home</p>
   </div>
 </div>
 
