--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -64,21 +64,19 @@ h2 {
 }
 
 .catalog-title h1 {
-  font-size: 36px;
+  font-size: 75px;
   font-weight: bold;
   color: #4a90e2;
   margin-bottom: 10px;
   margin-top: 2%;
 }
 
-.catalog-title p {
-  font-size: 25px;
-  color: #666;
-}
-
 .appear h1 {
   font-weight: bold;
   font-size: 75px;
+  color: #4a90e2;
+  margin-bottom: 10px;
+  margin-top: 2%;
 }
 
 .appear {
