--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -15,7 +15,7 @@
 .title{
   color: white;
   font-weight: 20px;
-  margin-right: 3%; 
+  margin-right: 40%; 
 }
 
 .navbar {
@@ -31,4 +31,26 @@
 
 .btn:hover {
   background-color: rgba(255, 255, 255, 0.3);
+}
+
+.one {
+  margin-right: 25%;
+}
+
+.two {
+  margin-right: 5%;
+}
+
+.justify-content-between {
+  justify-content: end !important;
+  padding: 10px !important;
+}
+
+.active::after{
+  content: "*";
+  color: red;
+}
+
+.active{
+  font-weight: bold;
 }
