--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   class="navbar navbar-expand-lg navbar-dark"
 >
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home">
+    <a class="navbar-brand" routerLink="/">
       <img
         src="../../../assets/img/ImagenLogo.png"
         class="me-2"
@@ -28,42 +28,74 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+  </div>
+  @if (isAdmin()) {
+    <div class="dropdown one">
+      <a
+        class="btn btn-link dropdown-toggle"
+        type="button"
+        id="managementDropdown"
+        data-bs-toggle="dropdown"
+        aria-expanded="false"
+      >
+        Management
+      </a>
+      <ul
+        class="dropdown-menu dropdown-menu-end"
+        aria-labelledby="managementDropdown"
+      >
+        @if (isAdmin()) {
+          <li>
+            <a class="dropdown-item" routerLinkActive="active" routerLink="/books/manageBooks">Manage books</a>
+          </li>
+        }
+        @if (isAdmin()) {
+          <li>
+            <a class="dropdown-item" routerLinkActive="active" routerLink="/movies/manageMovies">Manage movies</a>
+          </li>
+        }
+      </ul>
+    </div>
+  }
+  <div class="container-fluid">
     <div
       class="collapse navbar-collapse justify-content-between"
       id="navbarSupportedContent"
     >
       @if (isLogin()==true) {
-
-      <div class="dropdown">
+      <div class="dropdown two">
         <a
           class="btn btn-link dropdown-toggle"
           type="button"
-          id="navbarDropdown"
+          id="userDropdown"
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
           {{ username() }}
         </a>
-        <ul
-          class="dropdown-menu dropdown-menu-end"
-          aria-labelledby="navbarDropdown"
-        >
-          @if (isAdmin()) {
-          <li>
-            <a class="dropdown-item" routerLink="/users/list">Edit profiles</a>
-          </li>
-          }@if(isLogin()) {
-          <li>
-            <a class="dropdown-item" routerLink="/users/editUser/{{ idUser() }}"
-              >Edit my profile</a
-            >
-          </li>
-          }
-          <li>
-            <a routerLink="/users/rentals" class="dropdown-item">My rentals</a>
-          </li>
-        </ul>
+        <div class="dropdown-menu-container">
+          <ul
+            class="dropdown-menu dropdown-menu-end"
+            aria-labelledby="userDropdown"
+          >
+            @if (isAdmin()) {
+            <li>
+              <a class="dropdown-item"  routerLinkActive="active" routerLink="/users/list">Edit profiles</a>
+            </li>
+            }@if(isLogin()) {
+            <li>
+              <a class="dropdown-item"  routerLinkActive="active" routerLink="/users/editUser/{{ idUser() }}"
+                >Edit my profile</a
+              >
+            </li>
+            }
+            <li>
+              <a routerLink="/users/rentals"  routerLinkActive="active" class="dropdown-item">My rentals</a>
+            </li>
+          </ul>
+        </div>
       </div>
+      
       } @if (isLogin() == false) {
       <button
         class="btn btn-outline me-2"
@@ -84,56 +116,31 @@
     </div>
   </div>
 </nav>
+
+
+
 <nav id="nav2" class="navbar navbar-expand-lg navbar-dark">
   <div class="container">
-    <a routerLink="/" style="padding: 10px">Home</a>
-    <div class="dropdown">
+      <a routerLink="/home" routerLinkActive="active" style="padding: 10px">Home</a>
       <a
         routerLinkActive="active"
-        class="dropdown-toggle"
-        href="#"
-        role="button"
-        id="booksDropdown"
-        data-bs-toggle="dropdown"
-        aria-expanded="false"
+        routerLink="/books/catalogue"
         style="padding: 10px"
+        data-toggle="tooltip" 
+        data-placement="top" 
+        title="Catalogue of Book"
       >
         Books
       </a>
-      <ul class="dropdown-menu" aria-labelledby="booksDropdown">
-        <li>
-          <a class="dropdown-item" routerLink="/books/catalogue">Catalogue</a>
-        </li>
-        @if (isAdmin()) {
-        <li>
-          <a class="dropdown-item" routerLink="/books/addBook">Add Book</a>
-        </li>
-        }
-      </ul>
-    </div>
-    <div class="dropdown">
       <a
         routerLinkActive="active"
-        class="dropdown-toggle"
-        href="#"
-        role="button"
-        id="moviesDropdown"
-        data-bs-toggle="dropdown"
-        aria-expanded="false"
+        routerLink="/movies/catalogue"
         style="padding: 10px"
+        data-toggle="tooltip" 
+        data-placement="top" 
+        title="Catalogue of Movies"
       >
         Movies
       </a>
-      <ul class="dropdown-menu" aria-labelledby="moviesDropdown">
-        <li>
-          <a class="dropdown-item" routerLink="/movies/catalogue">Catalogue</a>
-        </li>
-        @if (isAdmin()) {
-        <li>
-          <a class="dropdown-item" routerLink="/movies/addMovie">Add Movie</a>
-        </li>
-        }
-      </ul>
     </div>
-  </div>
 </nav>
